--- a/src/gatsby/src/styles/advisories/advisoryFilter.scss
+++ b/src/gatsby/src/styles/advisories/advisoryFilter.scss
@@ -12,26 +12,34 @@
     display: flex;
     position: static;
     padding: 0;
-    input.form-check-input {
-      width: 1.5rem;
-      height: 1.5rem;
-      position: static;
-      border-color: $colorGreyMed;
+    input[type=checkbox] {
+      // reset default styles
+      -webkit-appearance: none;
+      appearance: none;
+      // set new styles
+      width: 24px;
+      height: 24px;
+      position: relative;
+      background-color: $colorWhite;
+      border: 1px solid $colorGreyMed;
       border-radius: 4px;
       cursor: pointer;
       margin: 0;
       &:checked::before {
         display: inline-block;
-        width: 1.5rem;
-        height: 1.5rem;
+        width: 22px;
+        height: 22px;
+        position: absolute;
+        top: 0;
+        left: 0;
         content: "\f00c";
         font-family: "Font Awesome 5 Free";
         font-weight: 900;
         font-size: 0.875rem;
         color: $colorWhite;
         background-color: $colorBlue;
-        border-radius: 4px;
-        padding: 2px 0 0 5px;
+        border-radius: 3px;
+        padding: 0 0 0 5px;
       }
     }
     label.form-check-label {
